<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="#eeeeee">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/tv_item_pop_cancel"
              app:layout_constraintBottom_toBottomOf="parent"
              android:gravity="center_horizontal"
              android:textSize="16sp"
              android:padding="10dp"
              android:textColor="#000000"
              android:text="@string/cancel"
              android:background="@color/white"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/tv_item_pop_collect"
              app:layout_constraintBottom_toTopOf="@id/tv_item_pop_cancel"
              android:gravity="center_horizontal"
              android:textSize="16sp"
              android:background="@color/white"
              android:padding="10dp"
              android:textColor="@color/colorPrimary"
              android:text="@string/collect_user"
              android:layout_marginBottom="5dp"/>

    <View android:layout_width="match_parent" android:layout_height="1dp"
          android:id="@+id/view_item_pop"
          android:background="#eeeeee"
          app:layout_constraintBottom_toTopOf="@id/tv_item_pop_collect"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/tv_item_pop_collect_offline"
              app:layout_constraintBottom_toTopOf="@id/view_item_pop"
              android:gravity="center_horizontal"
              android:textSize="16sp"
              android:background="@color/white"
              android:textColor="@color/colorPrimary"
              android:padding="10dp"
              android:text="@string/collect"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/tv_item_pop_uncollect"
              app:layout_constraintBottom_toTopOf="@id/tv_item_pop_cancel"
              android:gravity="center_horizontal"
              android:textSize="16sp"
              android:background="@color/white"
              android:textColor="@color/colorPrimary"
              android:padding="10dp"
              android:layout_marginBottom="5dp"
              android:text="@string/cancel_collect"/>

</android.support.constraint.ConstraintLayout>