<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/white">

    <ImageView android:layout_width="150dp" android:layout_height="150dp"
               android:id="@+id/iv_setting"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               android:layout_marginTop="30dp"
               android:src="@mipmap/timg"
               tools:ignore="ContentDescription"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/tv_setting_username"
              app:layout_constraintTop_toBottomOf="@+id/iv_setting"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:padding="20dp"
              android:textColor="@color/black"
              android:textSize="16sp"
              android:text="@string/tv_setting_user"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/tv_setting_store"
              app:layout_constraintTop_toBottomOf="@+id/tv_setting_username"
              android:padding="20dp"
              android:textColor="@color/black"
              android:textSize="16sp"
              android:text="@string/tv_setting_store"/>

    <View android:layout_width="match_parent" android:layout_height="1dp"
          android:background="@color/colorPrimary"
          android:id="@+id/view_store"
          app:layout_constraintTop_toBottomOf="@+id/tv_setting_store"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintLeft_toRightOf="parent"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/tv_setting_version"
              app:layout_constraintTop_toBottomOf="@+id/view_store"
              android:padding="20dp"
              android:textColor="@color/black"
              android:textSize="16sp"
              android:text="@string/tv_setting_version"
              tools:ignore="MissingConstraints"/>

    <View android:layout_width="match_parent" android:layout_height="1dp"
          android:id="@+id/view_version_separate"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          app:layout_constraintTop_toBottomOf="@+id/view_store"/>


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/tv_setting_version_code"
              android:text="@string/tv_version_code"
              android:textColor="@color/black"
              android:textSize="16sp"
              android:padding="20dp"
              app:layout_constraintTop_toBottomOf="@+id/view_store"
              app:layout_constraintEnd_toEndOf="parent"/>


    <View android:layout_width="match_parent" android:layout_height="1dp"
          android:id="@+id/view_version"
          app:layout_constraintTop_toBottomOf="@+id/tv_setting_version"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:background="@color/colorPrimary"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/tv_setting_about"
              app:layout_constraintTop_toBottomOf="@+id/view_version"
              android:text="@string/tv_setting_about_us"
              android:textColor="@color/black"
              android:textSize="16sp"
              android:padding="20dp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/tv_setting_quit"
              android:text="@string/tv_setting_quite"
              android:textColor="@color/colorAccent"
              android:textSize="16sp"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginBottom="20dp"/>


</android.support.constraint.ConstraintLayout>