<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="#eeeeee"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="70dp"
            android:paddingBottom="30dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/iv_login"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/dd"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_username"
            app:layout_constraintTop_toBottomOf="@+id/iv_login"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:counterEnabled="true"
            app:errorEnabled="true"
            tools:ignore="MissingConstraints">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:id="@+id/et_username"
                tools:ignore="MissingConstraints"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:errorEnabled="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_username"
            android:id="@+id/layout_password"
            tools:ignore="MissingConstraints">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_pwd"
                android:id="@+id/et_password"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:errorEnabled="true"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/layout_password"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:id="@+id/layout_confirm_pwd"
            tools:ignore="MissingConstraints">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:id="@+id/et_confirm_pwd"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:layout_width="180dp"
            android:layout_height="35dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_confirm_pwd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_bg"
            android:id="@+id/btn_login"
            tools:ignore="MissingConstraints"/>

    <Button
            android:layout_width="180dp"
            android:layout_height="35dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_bg"
            android:id="@+id/btn_register"
            tools:ignore="MissingConstraints"/>
</android.support.constraint.ConstraintLayout>